--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,29 @@
-/tmp
-/out-tsc
-/.idea
-/.vscode
-/node_modules
+tmp
+out-tsc
+.pnp
+.pnp.js
+
+# Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/.pnp
-.pnp.js
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
